# exact-cover-py

./: CHANGELOG.md  README.md  pyproject.toml
src/exact_cover_py/: __init__.py  exact_cover.py
tests/: debugging.py  original.py  problems.py  test_problems.py
tests/data/: pentominos-5-12.csv
